--- a/pdfFiles/templates/index.html
+++ b/pdfFiles/templates/index.html
@@ -97,135 +97,131 @@
     </style>
   </head>
   <body>
-    <section>
-      <div class="Facture">
-        <div class="header">
-          <div class="row">
-            <div class="logo" style="display: flex">
-              <img
-                class="img-responsive"
-                
-                alt="logo"
-                src="{{groupeLogo}}"
-                style="width: 71px;border: 1px solid gray; margin-right: 1em"
-              />
-              <div class="info-school">
-                <h4 class="text-end mb-0"> {{ groupeName }}</h4>
-                <h5>{{ groupeDevise }}</p>
-                <h5>{{siteContact}} </p>
-                <h5>{{siteName}} </h5>
+    <div class="container">
+      <section class="border p-2">
+        <div class="Facture">
+          <div class="header">
+            <div class="row">
+              <div class="logo col-6" style="display: flex">
+                <img
+                  class="img-responsive"
+                  
+                  alt="logo"
+                  src="{{groupeLogo}}"
+                  style="width: 71px;border: 1px solid gray; margin-right: 1em"
+                />
+                <div class="info-school">
+                  <h4 class="text-end mb-0"> {{ group.groupeName }}</h4>
+                  <h5>{{ group.groupeDevise }}</p>
+                  <h5>{{ group.siteContact}} </p>
+                  <h5>{{ group.siteName}} </h5>
+                </div>
+              </div>
+  
+              <div class="title col-6">
+                <h2>BULLETIN DE PAIE</h2>
+                <div class="col-7 text-left">
+                  <div class="receipt-right py-0">
+                     <p>Mois : <b>{{month}}</b></p>
+                     <p>Année scolaire : <b>{{group.schoolYear}} </b></p>
+                     <p>Date de paiement : <b>{{date}} </b></p>
+                     <p>AgentPayeur : <b>{{agent}} </b></p>
+                  </div>
+               </div>
+                </p>
               </div>
             </div>
-            <div class="title">
-              <h2>BULLETIN DE PAIE</h2>
-              <div class="col-7 text-left">
-                <div class="receipt-right">
-                   <p>Mois : <b>{{eleveName}}</b></p>
-                   <p>Année scolaire : <b>{{elevePrenom}} </b></p>
-                   <p>Date de paiement : <b>{{matricule}} </b></p>
-                   <p>AgentPayeur : <b>{{niveau}} </b></p>
-                </div>
-             </div>
-              </p>
-            </div>
-          </div>
-          <div class="row">
-              <div class="col-md-6">
-                <div class="card border-secondary mb-3" style="width: 100%">
-                  <div class="card-header">Remunération(s)</div>
-                  <div class="card-body text-secondary">
-                    {% for rem in  remunerations  %}
-                      <div class="row">
+            <hr class="my-4">
+            <div class="row">
+                <div class="col-md-6">
+                  <div class="card border-secondary h-100 mb-3 rounded-0" style="width: 100%">
+                    <div class="card-header">BASE CALCUL</div>
+                    <div class="card-body text-secondary">
+                      {% for rem in  base_calcul  %}
                         <div class="row">
-                          <div class="col card-text text-end">{{ rem.label }}</div>
-                          <div class="col card-text text-end">{{ rem.amount }}</div>
+                            <div class="col-6 card-text text-end">{{ rem.label }}</div>
+                            <div class="col-6 card-text text-end">{{ rem.amount }}</div>
                         </div>
-                      </div>
-                    {% endfor %}
-                  </div>
-                </div>            
+                      {% endfor %}
+                    </div>
+                  </div>            
+                </div>
+      
+                <div class="col-md-6">
+                  <div class="card border-secondary mb-3 h-100 rounded-0" style="width: 100%">
+                    <div class="card-header">AGENT/ENSEIGNANT</div>
+                    <div class="card-body text-secondary py-0">
+                        <div class="row py-0">
+                          <div class="col-12 card-text text-end">Nom et Prénoms: <strong>{{ recipient.fullname }}</strong></div>
+                          <div class="col-12 card-text text-end">Fonction: <strong>{{ recipient.fonction }}</strong></div>
+                          <div class="col-12 card-text text-end">Matricule: <strong>{{ recipient.matricule }}</strong></div>
+                        </div>
+                    </div>
+                  </div>             
+                </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="row mt-3" style="border: 2px solid black;">
+              <div class="col-6 p-0" style="border-right: 2px solid black;">
+                <table class="table table-bordered" >
+                  <tr>
+                    <th colspan="2" class="text-center">REMUNERATIONS</th>
+                  </tr>
+                  <tr>
+                    <td class="bg-warning">RUBRIQUE</td>
+                    <td class="bg-warning">MONTANT</td>
+                  </tr>
+                  {% for rem in  remunerations  %}
+                  <tr>
+                    <td>{{ rem.label }}</td>
+                    <td>{{ rem.amount }}</td>
+                  </tr>
+                  {% endfor %}
+
+                  <tr>
+                    <td class="bg-warning">TOTAL DES REMUNERATIONS</td>
+                    <td class=""><strong>{{ total_remuneration }}</strong></td>
+                  </tr>
+                  <tr>
+                    <td class="bg-warning">SALAIRE BRUT</td>
+                    <td class=""><strong>{{ brut_salary }}</strong></td>
+                  </tr>
+                </table>
               </div>
+              <div class="col-6 p-0">
+                <table class="table table-bordered">
+                  <tr>
+                    <th colspan="2" class="text-center">DEDUCTIONS</th>
+                  </tr>
+                  <tr>
+                    <td class="bg-warning">RUBRIQUE</td>
+                    <td class="bg-warning">MONTANT</td>
+                  </tr>
+                  {% for rem in  deductions  %}
+                  <tr>
+                    <td>{{ rem.label }}</td>
+                    <td>{{ rem.amount }}</td>
+                  </tr>
+                  {% endfor %}
     
-              <div class="col-md-6">
-                <div class="card border-secondary mb-3" style="width: 100%">
-                  <div class="card-header">Déduction(s)</div>
-                  <div class="card-body text-secondary">
-                      <div class="row">
-                        <div class="col card-text text-end">Nom et Prénoms: <strong>{{ recipient.fullname }}</strong></div>
-                        <div class="col card-text text-end">Fonction: <strong>{{ recipient.fonction }}</strong></div>
-                        <div class="col card-text text-end">Matricule: <strong>{{ recipient.matricule }}</strong></div>
-                      </div>
-                  </div>
-                </div>             
+                  <tr>
+                    <td class="bg-warning">TOTAL DES DEDUCTIONS</td>
+                    <td class=""><strong>{{ total_deduction }}</strong></td>
+                  </tr>
+                  <tr>
+                    <td colspan="2"></td>
+                  </tr>
+                  <tr>
+                    <td class=""><strong>SALAIRE NET (A PAYER):</strong></td>
+                    <td class=""><strong>{{ net_to_pay }}</strong></td>
+                  </tr>
+                </table>
               </div>
-          </div>
-        </div>
-        <div class="body">
-          <div class="table">
-            <div class="table_head">
-              <div class="row">
-                <div class="col ligne">
-                  <p class="p_title">DESCRIPTION</p>
-                </div>
-                
-                <div class="col ligne2">
-                  <p class="p_title">MONTANT</p>
-                </div>
-              </div>
-            </div>
-            <div class="table_body">
-              {% for line in transactions %}  
-                <div class="row">
-                  <div class="col ligne">
-                    <p>{{ line.label }}</p>
-                  </div>
-                  <div class="col ligne1">
-                    <p>{{ line.paied }}</p>
-                  </div>
-                </div>
-              {% endfor %} 
-            </div>
-            <div class="table_foot">
-              <div class="row">
-                <div class="col ligne1">
-                  <p></p>
-                </div>
-                <div class="col ligne">
-                  <p></p>
-                </div>
-                <div class="col ligne1">
-                  <p class="p_title">Total :</p>
-                </div>
-                <div class="col ligne1">
-                  <p>{{totalAmountPaied}}</p>
-                 
-                </div>
-              </div>
-             
             </div>
           </div>
         </div>
-        <div class="footer">
-          <div class="row">
-            <div class="col">
-                <div class="col ">
-                    <p class="">Agent: {{printerAgent}} </p>
-                    <p class="">Caisse: {{ caisse }}</p>
-                    <p class="">Date: {{dateRecu }}</p>
-                  </div>
-            </div>
-            <div class="col w_50 text_right">
-              <p>
-                Mode paiement: 
-                <stroing>
-                {{ modePay }}</strong>
-             </p>
-              <p class="p_title">Signature</p>
-              
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </body>
 </html>
