--- a/pdfFiles/templates/index.html
+++ b/pdfFiles/templates/index.html
@@ -214,7 +214,7 @@
                   </tr>
                   <tr>
                     <td class=""><strong>SALAIRE NET (A PAYER):</strong></td>
-                    <td class=""><strong>{{ net_to_pay }}</strong></td>
+                    <td class="text-danger"><strong>{{ net_to_pay }}</strong></td>
                   </tr>
                 </table>
               </div>
