--- a/pdfFiles/templates/work.html
+++ b/pdfFiles/templates/work.html
@@ -2,14 +2,14 @@
 <html>
    <title>Caisse</title>
    <head>
-      <style>      {{bootstrap}}      body{          width: 100%;      }      .text-danger strong {              color: #9f181c;          }          .receipt-main {              background: #ffffff none repeat scroll 0 0;              border-bottom: 3px solid #333333;              border-top: 3px solid #9f181c;              margin-top: 50px;              margin-bottom: 50px;              padding: 40px 30px ;              box-shadow: 0 1px 21px #acacac;              color: #333333;              font-family: open sans;          }          .receipt-main p {              color: #333333;              font-family: open sans;              line-height: 1.42857;          }          .receipt-footer h1 {              font-size: 15px;              font-weight: 400 ;              margin: 0 ;          }          .receipt-main thead {              background: #414143 none repeat scroll 0 0;          }          .receipt-main thead th {              color:#fff;              background: gray;          }          .receipt-right h5 {              font-size: 16px;              font-weight: bold;              margin: 0 0 7px 0;          }          .receipt-right p {              font-size: 12px;              margin: 0px;          }          .receipt-right p i {              text-align: center;              width: 18px;          }          .receipt-main td {              padding: 9px 20px ;          }          .receipt-main th {              padding: 5px 20px ;          }          .receipt-main td {              font-size: 13px;              font-weight: initial ;          }          .receipt-main td p:last-child {              margin: 0;              padding: 0;          }          .receipt-main td h2 {              font-size: 20px;              font-weight: 900;              margin: 0;              text-transform: uppercase;          }          .receipt-header-mid .receipt-left h1 {              font-weight: 100;              text-align: right;              text-transform: uppercase;          }          .receipt-header-mid {              margin: 10px 0;              overflow: hidden;          }          #container {              background-color: #dcdcdc;          }          th{            padding: 2px !important;            padding-left: 10px !important;            font-size: 0.8em !important;          }          td{            padding: 5px !important;          }    </style>
+      <style>      {{bootstrap}}      body{          width: 100%;      }      .text-danger strong {              color: #9f181c;          }          .receipt-main {              background: #ffffff none repeat scroll 0 0;              border-bottom: 3px solid #333333;              border-top: 3px solid #9f181c;              margin-top: 50px;              margin-bottom: 50px;              padding: 40px 30px ;              box-shadow: 0 1px 21px #acacac;              color: #333333;              font-family: open sans;          }          .receipt-main p {              color: #333333;              font-family: open sans;              line-height: 1.42857;          }          .receipt-footer h1 {              font-size: 15px;              font-weight: 400 ;              margin: 0 ;          }          .receipt-main thead {              background: #414143 none repeat scroll 0 0;          }          .receipt-main thead th {              color:#fff;              background: gray;          }          .receipt-right h5 {              font-size: 16px;              font-weight: bold;              margin: 0 0 7px 0;          }          .receipt-right p {              font-size: 12px;              margin: 0px;          }          .receipt-right p i {              text-align: center;              width: 18px;          }          .receipt-main td {              padding: 9px 20px ;          }          .receipt-main th {              padding: 5px 20px ;          }          .receipt-main td {              font-size: 13px;              font-weight: initial ;          }          .receipt-main td p:last-child {              margin: 0;              padding: 0;          }          .receipt-main td h2 {              font-size: 20px;              font-weight: 900;              margin: 0;              text-transform: uppercase;          }          .receipt-header-mid .receipt-left h1 {              font-weight: 100;              text-align: right;              text-transform: uppercase;          }          .receipt-header-mid {              margin: 10px 0;              overflow: hidden;          }          #container {              background-color: #dcdcdc;          }          th{            padding: 2px !important;            padding-left: 10px !important;            font-size: 0.8em !important;          }          td{            padding: 5px !important;          }          </style>
    </head>
    <body>
       <div class="container col">
          <div class="receipt-main m-auto mt-0">
             <div class="row mb-0">
-               <div class="receipt-header row mt-0">
-                  <div class="col-12 d-flex">
+               <div class="receipt-header col-12 row mt-0">
+                  <div class="col-10 d-flex">
                      <div class="receipt-left">                <img                  class="img-responsive mr-4"                  alt="iamgurdeeposahan"                  src="{{groupeLogo}}"                  style="width: 71px; border-radius: 43px; margin-left: 1em"                />              </div>
                      <div class="">
                         <div class="receipt-right">
@@ -18,6 +18,11 @@
                            <p>{{siteContact}} <i class="fa fa-phone"></i></p>
                            <h5>{{siteName}} <i class="fa fa-location-arrow"></i></h5>
                         </div>
+                     </div>
+                  </div>
+                  <div class="col-2">
+                     <div>
+                        <img width="100" src="data:image/png;base64,{{ qrcode }}" alt="QR Code">
                      </div>
                   </div>
                </div>
@@ -53,14 +58,14 @@
                   <th style="background-color: gray !important; color: white">                Payé            </th>
                   <th style="background-color: gray !important; color: white">                Reste à Payer            </th>
                </tr>
-               {% for line in transactions %}          
+               {% for line in transactions %}                                        
                <tr>
                   <td>{{ line.label }}</td>
                   <td>{{ line.amount }}</td>
                   <td>{{ line.paied }}</td>
                   <td>{{ line.restPaied }}</td>
                </tr>
-               {% endfor %}          
+               {% endfor %}                                        
                <tr>
                   <td style="width: 55% !important" class="text-right">
                      <h2 style="font-size: 0.9em">Total:</h2>
@@ -70,17 +75,44 @@
                   <td class="text-left text-danger" style="width: 100px">                <strong> {{totalAmountRest}}</strong>            </td>
                </tr>
             </table>
+            <hr/>
+            {% if eleveFees  %}            
+            <p style="font-size: 0.8em" class="mb-0">RESUME DES FRAIS OBLIGATOIRES</p>
+            <table class="table table-bordered resums mt-0">
+               <tr style="background-color: gray !important; color: white" >
+                  <th style="background-color: gray !important; color: white; font-size: 0.7em !important">              Description            </th>
+                  <th style="background-color: gray !important; color: white; font-size: 0.7em !important">              Montant initial           </th>
+                  <th style="background-color: gray !important; color: white; font-size: 0.7em !important">              Déjà Payé            </th>
+                  <th style="background-color: gray !important; color: white; font-size: 0.7em !important">              Reste à Payer            </th>
+               </tr>
+               {% for line in eleveFees %}                                        
+               <tr>
+                  <td style="font-size: 0.7em !important">{{ line.transactionTypeTitle }}</td>
+                  <td style="font-size: 0.7em !important">{{ line.standardAmount }}</td>
+                  <td style="font-size: 0.7em !important">{{ line.totalAmountPaid }}</td>
+                  <td style="font-size: 0.7em !important">{{ line.restToPay }}</td>
+               </tr>
+               {% endfor %}                                        
+               <tr>
+                  <td class="text-right">
+                     <h2 style="font-size: 0.9em">Total:</h2>
+                  </td>
+                  <td class="text-left text-danger" style="width: 100px; font-size: 0.7em !important">              <strong> {{totalstandardAmount}}</strong>            </td>
+                  <td class="text-left text-danger" style="width: 100px; font-size: 0.7em !important">                <strong> {{totaltotalAmountPaid}}</strong>            </td>
+                  <td class="text-left text-danger" style="width: 100px; font-size: 0.7em !important">                <strong> {{totalrestToPay}}</strong>            </td>
+               </tr>
+            </table>
+            {% endif %}            
             <div class="row">
                <div            class="receipt-header receipt-header-mid receipt-footer row w-100"          >
                   <div class="col-6">
                      <div class="col-12 text-left">
                         <div class="receipt-right">
                            <p>
-                              Mode paiement: 
+                              Mode paiement:                                                             
                               <stroing>
-                              {{ modePay }}</strong>
+                              {{ modePay }}</strong>                                                      
                            </p>
-                           <h5 style="color: rgb(140, 140, 140)">smaartschool</h5>
                         </div>
                      </div>
                      <div class="col-12"></div>
