Set size of receipt

--- a/pdfFiles/templates/work.html
+++ b/pdfFiles/templates/work.html
@@ -1,109 +1,1 @@
-<!DOCTYPE html>
-<html>
-   <title>Caisse</title>
-   <head>
-      <style>      {{bootstrap}}      body{          width: 100%;      }      .text-danger strong {              color: #9f181c;          }          .receipt-main {              background: #ffffff none repeat scroll 0 0;              border-bottom: 3px solid #333333;              border-top: 3px solid #9f181c;              margin-top: 50px;              margin-bottom: 50px;              padding: 40px 30px ;              box-shadow: 0 1px 21px #acacac;              color: #333333;              font-family: open sans;          }          .receipt-main p {              color: #333333;              font-family: open sans;              line-height: 1.42857;          }          .receipt-footer h1 {              font-size: 15px;              font-weight: 400 ;              margin: 0 ;          }          .receipt-main thead {              background: #414143 none repeat scroll 0 0;          }          .receipt-main thead th {              color:#fff;              background: gray;          }          .receipt-right h5 {              font-size: 16px;              font-weight: bold;              margin: 0 0 7px 0;          }          .receipt-right p {              font-size: 12px;              margin: 0px;          }          .receipt-right p i {              text-align: center;              width: 18px;          }          .receipt-main td {              padding: 9px 20px ;          }          .receipt-main th {              padding: 5px 20px ;          }          .receipt-main td {              font-size: 13px;              font-weight: initial ;          }          .receipt-main td p:last-child {              margin: 0;              padding: 0;          }          .receipt-main td h2 {              font-size: 20px;              font-weight: 900;              margin: 0;              text-transform: uppercase;          }          .receipt-header-mid .receipt-left h1 {              font-weight: 100;              text-align: right;              text-transform: uppercase;          }          .receipt-header-mid {              margin: 10px 0;              overflow: hidden;          }          #container {              background-color: #dcdcdc;          }          th{            padding: 2px !important;            padding-left: 10px !important;            font-size: 0.8em !important;          }          td{            padding: 5px !important;          }    </style>
-   </head>
-   <body>
-      <div class="container col">
-         <div class="receipt-main m-auto mt-0">
-            <div class="row mb-0">
-               <div class="receipt-header row mt-0">
-                  <div class="col-12 d-flex">
-                     <div class="receipt-left">                <img                  class="img-responsive mr-4"                  alt="iamgurdeeposahan"                  src="{{groupeLogo}}"                  style="width: 71px; border-radius: 43px; margin-left: 1em"                />              </div>
-                     <div class="">
-                        <div class="receipt-right">
-                           <h4 class="text-end mb-0">{{ groupeName }}</h4>
-                           <p>{{groupeDevise}} <i class="fa fa-envelope-o"></i></p>
-                           <p>{{siteContact}} <i class="fa fa-phone"></i></p>
-                           <h5>{{siteName}} <i class="fa fa-location-arrow"></i></h5>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <hr class="my-0 mt-1" />
-            <div class="row">
-               <div class="receipt-header receipt-header-mid row pl-1 w-100">
-                  <div class="col-7 text-left">
-                     <div class="receipt-right">
-                        <p>Site : <b>{{siteName}}</b></p>
-                        <p>Adresse : <b>{{siteAdress}} </b></p>
-                        <p>Tél : <b>{{siteContact}} </b></p>
-                        <p>Annee : <b>{{scholarYear}} </b></p>
-                     </div>
-                  </div>
-                  <div class="col-5">
-                     <div class="w-100 row">
-                        <div class="col-9">
-                           <h5 class="text-uppercase text-end w-100">                  Reçu de caisse                </h5>
-                           <div class="receipt-right">
-                              <p>Agent : <b>{{printerAgent}}</b></p>
-                              <p>Caisse : <b>{{ caisse }}</b></p>
-                              <p>Date : <b>{{dateRecu }}</b></p>
-                           </div>
-                        </div>
-
-                        <div class="col-3">
-                           <img width="65" src="data:image/png;base64,{{ qrcode }}" alt="QR Code">  
-                        </div>
-
-                     </div>
-                  </div>
-               </div>
-            </div>
-            <table class="table table-bordered">
-               <tr style="background-color: gray !important; color: white">
-                  <th style="background-color: gray !important; color: white">                MVT            </th>
-                  <th style="background-color: gray !important; color: white">                Libellé de l\'opération            </th>
-                  <th style="background-color: gray !important; color: white">                Catégorie            </th>
-                  <th style="background-color: gray !important; color: white">                Montant            </th>
-               </tr>
-               {% for line in transactions %}          
-               <tr>
-                  <td style="width: 50px">{{ line.numerate }}</td>
-                  <td style="width: 50% !important">{{ line.label }}</td>
-                  <td style="width: 100px">{{ line.typeRecipient }}</td>
-                  <td style="width: 100px">{{ line.amount }}</td>
-               </tr>
-               {% endfor %}          
-               <tr>
-                  <td colspan="3" class="text-right">
-                     <h2 style="font-size: 0.9em">Total:</h2>
-                  </td>
-                  <td class="text-left text-danger">              <strong> {{totalAmountTransaction}}</strong>            </td>
-               </tr>
-            </table>
-            <div class="row">
-               <div            class="receipt-header receipt-header-mid receipt-footer row w-100"          >
-                  <div class="col-6">
-                     <div class="col-12 text-left">
-                        <div class="receipt-right">
-                           <p>
-                              Mode paiement: 
-                              <stroing>
-                              {{ modePay }}</strong>
-                           </p>
-                           <h5 style="color: rgb(140, 140, 140)">smaartschool</h5>
-                        </div>
-                     </div>
-                     <div class="col-12"></div>
-                  </div>
-                  <div class="col-6 d-flex justify-content-end">
-                     <table class="table table-bordered">
-                        <tr>
-                           <th>Bénéficiaire</th>
-                           <th>Caissier</th>
-                        </tr>
-                        <tr style="height: 100px">
-                           <td></td>
-                           <td></td>
-                        </tr>
-                     </table>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-   </body>
-</html>
+<!DOCTYPE html><html>   <head>      <title>Facture</title>      <style>        :root {            --bg-clr: #ead376;            --white: #fff;            --primary-clr: #2f2929;            --secondary-clr: #5265a7;          }                    * {            margin: 0;            padding: 0;            box-sizing: border-box; }                    body {            background: var(--primary-clr);            font-size: 12px;            line-height: 20px;            color: var(--primary-clr);            padding: 0 0px;            display: flex;            justify-content: start;            width: 100%;            margin: auto          }          section{            width: 100%;          }          .Facture {            width: 100%;            height: auto;            background: var(--white);            padding: 10px 10px;            position: relative;            margin: 20px auto;            border: 1px solid gray;          }                    .ligne1 {            width: 15%;          }                    .w_50 {            width: 50%;          }                    .ligne {            width: 55%;          }                    .title h2{              font-size: 1.5em !important;          }                    .p_title {            font-weight: 700;            font-size: 14px;          }                    .p_title span{              font-size: 14px;              font-weight: 400;          }                    .row {            display: flex;            justify-content: space-between;          }                    .text_right {            text-align: right;          }                    .Facture .header .row {            justify-content: space-between;            margin-bottom: 10px;          }                    .Facture .header .row:last-child {            align-items: flex-end;          }                    .Facture .header .row .logo p { cursive;          }                    .Facture .header .row .logo p,          .Facture .header .row .title h2 {            font-size: 32px;            line-height: 38px;            color: var(--secondary-clr);          }                    .Facture .header .row .adresse .p_title span {            font-weight: 400;            font-size: 12px;          }                    .Facture .body .table .col p {            font-weight: 700;          }                    .Facture .body .table .row .col {            padding: 5px 1px;          }                    .Facture .body .table .table_head .row {            border: 2px solid;            border-color: var(--primary-clr) transparent var(--primary-clr) transparent;                     }                    .Facture .body .table .table_body .row:last-child {            border-bottom: 2px solid var(--primary-clr);          }                    .Facture .body .table .table_foot .grand_total_wrap {            margin-top: 20px;          }                    .Facture .body .table .table_foot .grand_total_wrap .grand_total {            background: var(--secondary-clr);            color: var(--white);            padding: 10px 15px;          }                              .Facture .footer {            margin-top: 30px;          }    </style>   </head>   <body style="background: white; display: flex; justify-content: j" >      <section class="b" style=" width: 100%">         <div class="Facture">            <div class="header">               <div class="row">                  <div class="logo col-12" style="display: flex">                     <img            class="img-responsive"                        alt="logo"            src="{{groupeLogo}}"            style="width: 71px;border: 1px solid gray; margin-right: 1em"          />                                                    <div class="info-school">                        <h4 class="text-end mb-0"> {{ groupeName }}</h4>                        <h5>                        {{ groupeDevise }}</p>                                                            <h5>                        {{siteContact}} </p>                                                            <h5>{{siteName}} </h5>                     </div>                  </div>               </div>               <div class="row">                  <div class="title" style="width: 100%">                     <h2 style="text-align: end">Reçu de caisse</h2>                  </div>               </div>               <div class="row">                  <div class="number">                     <div>                        <img width="65" src="data:image/png;base64,{{ qrcode }}" alt="QR Code">                     </div>                     <p class="p_title">Reçu n⁰: {{ recuNumber }} </p>                  </div>                  <div class="adresse text_right">                     <p>De</p>                     <p class="p_title">            {{eleveName}}             <span>{{elevePrenom}}</span><br />            <span>Matricule(s) :{{matricule}}</span><br />            <span>Classe(s) :{{niveau}}</span><br />            <span>Année :{{scholarYear}}</span><br />          </p>                  </div>               </div>            </div>            <div class="body">               <div class="table">                  <div class="table_head">                     <div class="row">                        <div class="col ligne">                           <p class="p_title">DESCRIPTION</p>                        </div>                        <div class="col ligne2">                           <p class="p_title">MONTANT</p>                        </div>                     </div>                  </div>                  <div class="table_body">                     {% for line in transactions %}                                                        <div class="row">                        <div class="col ligne">                           <p>{{ line.label }}</p>                        </div>                        <div class="col ligne1">                           <p>{{ line.paied }}</p>                        </div>                     </div>                     {% endfor %}                                             </div>                  <div class="table_foot">                     <div class="row">                        <div class="col ligne1">                           <p></p>                        </div>                        <div class="col ligne">                           <p></p>                        </div>                        <div class="col ligne1">                           <p class="p_title">Total :</p>                        </div>                        <div class="col ligne1">                           <p>{{totalAmountPaied}}</p>                        </div>                     </div>                  </div>               </div>               <div>                  <p style="font-size: 0.8em">RESUME DES FRAIS OBLIGATOIRES</p>                  <table>                     <tr>                        <th style="text-align: left">Total dû</th>                        <td>: {{ totalstandardAmount }}</td>                     </tr>                     <tr>                        <th style="text-align: left">Total payé</th>                        <td>: {{ totaltotalAmountPaid }}</td>                     </tr>                     <tr>                        <th style="text-align: left">Total restant</th>                        <td>: {{ totalrestToPay }}</td>                     </tr>                  </table>               </div>            </div>            <div class="footer">               <div class="row">                  <div class="col">                     <div class="col ">                        <p class="">Agent: {{printerAgent}} </p>                        <p class="">Caisse: {{ caisse }}</p>                        <p class="">Date: {{dateRecu }}</p>                     </div>                  </div>                  <div class="col w_50 text_right">                     <p>                        Mode paiement:                                                             <stroing>                        {{ modePay }}</strong>                                                   </p>                     <p class="p_title">Signature</p>                  </div>               </div>            </div>         </div>      </section>   </body></html>
