--- a/pdfFiles/templates/work.html
+++ b/pdfFiles/templates/work.html
@@ -2,7 +2,10 @@
 <html>
    <head>
       <title>Facture</title>
-      <style>        :root {            --bg-clr: #ead376;            --white: #fff;            --primary-clr: #2f2929;            --secondary-clr: #5265a7;          }                    * {            margin: 0;            padding: 0;            box-sizing: border-box; }                    body {            background: var(--primary-clr);            font-size: 12px;            line-height: 20px;            color: var(--primary-clr);            padding: 0 0px;            display: flex;            justify-content: start;            width: 100%;            margin: auto          }          section{            width: 100%;          }          .Facture {            width: 100%;            height: auto;            background: var(--white);            padding: 10px 10px;            position: relative;            margin: 20px auto;            border: 1px solid gray;          }                    .ligne1 {            width: 30%;          }                    .w_50 {            width: 50%;          }                    .ligne {            width: 70%;          }                    .title h2{              font-size: 1.5em !important;          }                    .p_title {            font-weight: 700;            font-size: 14px;          }                    .p_title span{              font-size: 14px;              font-weight: 400;          }                    .row {            display: flex;            justify-content: space-between;          }                    .text_right {            text-align: right;          }                    .Facture .header .row {            justify-content: space-between;            margin-bottom: 10px;          }                    .Facture .header .row:last-child {            align-items: flex-end;          }                    .Facture .header .row .logo p { cursive;          }                    .Facture .header .row .logo p,          .Facture .header .row .title h2 {            font-size: 32px;            line-height: 38px;            color: var(--secondary-clr);          }                    .Facture .header .row .adresse .p_title span {            font-weight: 400;            font-size: 12px;          }                    .Facture .body .table .col p {            font-weight: 700;          }                    .Facture .body .table .row .col {            padding: 5px 1px;          }                    .Facture .body .table .table_head .row {            border: 2px solid;            border-color: var(--primary-clr) transparent var(--primary-clr) transparent;                     }                    .Facture .body .table .table_body .row:last-child {            border-bottom: 2px solid var(--primary-clr);          }                    .Facture .body .table .table_foot .grand_total_wrap {            margin-top: 20px;          }                    .Facture .body .table .table_foot .grand_total_wrap .grand_total {            background: var(--secondary-clr);            color: var(--white);            padding: 10px 15px;          }                              .Facture .footer {            margin-top: 30px;          }   
+      <style>                         
+         .row { display: flex;           
+                justify-content: space-between;          
+         } 
       *{
          color: black !important;
          font-weight: bolder !important;
@@ -25,116 +28,95 @@
       }
       </style>
    </head>
-   <body style="background: white; display: flex; justify-content: j" >
-      <section class="b" style=" width: 300px">
+   <body >
+      {% for student in data_avis %}
+      <section class="b" style=" width: 100%">
          <div class="Facture">
             <div class="header">
                <div class="row">
                   <div class="logo col-12" style="display: flex">
-                     <img            class="img-responsive"                        alt="logo"            src="{{groupeLogo}}"            style="width: 71px;border: 1px solid gray; margin-right: 1em"          />                                                                         
+                     <img class="img-responsive" alt="logo" src="{{ group.groupeLogo}}" style="width: 71px;border: 1px solid gray; margin-right: 1em"/>                                                                         
                      <div class="info-school">
-                        <h4 class="text-end mb-0"> {{ groupeName }}</h4>
+                        <h4 class="text-end mb-0"> {{ group.groupeName }}</h4>
                         <h5>
-                        {{ groupeDevise }}</p>                                                                                    
+                        {{ group.groupeDevise }}</p>                                                                                    
                         <h5>
-                        {{siteContact}} </p>                                                                                    
-                        <h5>{{siteName}} </h5>
+                        {{ group.siteContact}} </p>                                                                                    
+                        <h5>{{ group.siteName}} </h5>
                      </div>
+                  </div>    
+
+                  <div style="width: 25%;">
+                     <h1 style="text-align: center">Avis de paiement des droits d'écolage</h1>
                   </div>
                </div>
                <hr/>
-               <h2 style="text-align: center">Reçu de caisse</h2>
+               
                <table>
                   <tr>
                      <td>Année scolaire </td>
-                     <td>: {{scholarYear}}</td>
-                  </tr>
-
-                  <tr>
-                     <td>Reçu nº</td>
-                     <td>: {{ recuNumber }}</td>
+                     <td>: {{group.schoolYear}}</td>
                   </tr>
                </table>
                <hr/>
-               <table>
-                  <tr>
-                     <td class="stay-up">Matricule(s)</td>
-                     <td>: {{matricule}}</td>
-                  </tr>
 
-                  <tr>
-                     <td class="stay-up">Nom(s)</td>
-                     <td>: {{ eleveName }}</td> 
-                  </tr>
+               <div class="row">
+                  <table style="width: 40%">
+                     <tr>
+                        <td class="stay-up">Matricule</td>
+                        <td>: {{student.inscription.eleveMatricule}}</td>
+                     </tr>
+   
+                     <tr>
+                        <td class="stay-up">Nom(s)</td>
+                        <td>: {{ student.inscription.eleveNom }}</td> 
+                     </tr>
+   
+                     <tr >
+                        <td class="stay-up">Prénom(s)</td>
+                        <td>: {{ student.inscription.elevePrenom }}</td>
+                     </tr>
+   
+                     <tr>
+                        <td class="stay-up">Classe</td>
+                        <td>: {{ student.inscription.siteClassCode }}</td>
+                     </tr>
+                  </table>
 
-                  <tr >
-                     <td class="stay-up">Prénom(s)</td>
-                     <td>: {{ elevePrenom }}</td>
-                  </tr>
-
-                  <tr>
-                     <td class="stay-up">Classe(s)</td>
-                     <td>: {{ niveau }}</td>
-                  </tr>
-               </table>
+                  <div>
+                     <p style="text-align: justify">{{ message }}</p>
+                  </div>
+               </div>
 
                <table id="table-fees">
                   <tr>
                      <td class="bg-th">Description</td>
+                     <td class="bg-th" style="width: 100px">Montant</td>
                      <td class="bg-th" style="width: 100px">Payé</td>
+                     <td class="bg-th" style="width: 100px">Reste</td>
                      <!--td>Reste à Payer</td-->
                   </tr>
-                  {% for line in transactions %} 
+                  {% for line in student.fees %} 
                   <tr>
-                     <td>{{ line.label }}</td>
-                     <td>{{ line.paied }}</td>
+                     <td>{{ line.transactionTypeTitle }}</td>
+                     <td>{{ line.standardAmount }}</td>
+                     <td>{{ line.totalAmountPaid }}</td>
+                     <td>{{ line.restToPay }}</td>
                   </tr>
                   {% endfor %} 
+                  <tr>
+                     <td class="bg-th" style="text-align: end; padding-right: 2em">Total</td>
+                     <td class="bg-th" style="width: 100px">{{ student.inscription.totalAmountPlanned }}</td>
+                     <td class="bg-th" style="width: 100px">{{ student.inscription.totalAmountReceived }}</td>
+                     <td class="bg-th" style="width: 100px">{{ student.inscription.totalAmountExpected }}</td>
+                     <!--td>Reste à Payer</td-->
+                  </tr>
                </table>
             </div>
             
-            <div class="body">
-               <div>
-                  <p style="font-size: 0.8em">RESUME DES FRAIS OBLIGATOIRES</p>
-                  <table>
-                     <tr>
-                        <th style="text-align: left">Total dû</th>
-                        <td>: {{ totalstandardAmount }}</td>
-                     </tr>
-                     <tr>
-                        <th style="text-align: left">Total payé</th>
-                        <td>: {{ totaltotalAmountPaid }}</td>
-                     </tr>
-                     <tr>
-                        <th style="text-align: left">Total restant</th>
-                        <td>: {{ totalrestToPay }}</td>
-                     </tr>
-                  </table>
-               </div>
-            </div>
             <hr/>
-            <div class="footer">
-               <div class="row">
-                  <div class="col">
-                     <div class="col ">
-                        <p class="">Agent: {{printerAgent}} </p>
-                        <p class="">Caisse: {{ caisse }}</p>
-                        <p class="">Date: {{dateRecu }}</p>
-                        <p><img width="65" src="data:image/png;base64,{{ qrcode }}" alt="QR Code"> </p>
-                     </div>
-
-                  </div>
-                  <div class="col w_50 text_right">
-                     <p>
-                        Mode paiement:                                                                                     
-                        <stroing>
-                        {{ modePay }}</strong>                                                                        
-                     </p>
-                     <p class="p_title">Signature</p>
-                  </div>
-               </div>
-            </div>
          </div>
       </section>
+      {% endfor %}
    </body>
 </html>
